--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     </div>
                 </div>
 
+
             </div>
 
         </div>
@@ -75,77 +76,127 @@
         </section>
         <!-- process -->
         <section id="process">
-            <h2>My creative process and
-                tools i used</h2>
-            <div class="process">
-                <div class="row g-3">
-                    <div class="col-md-4">
-                        <div class="tools">
-                            <img src="img/mark2.png" alt="process-icon">
-                            <h3>Market Research.</h3>
-                            <p>In the beginning phase, the goal is to learn as much as possible about your market and
-                                your
-                                individual goal.</p>
+            <div class="container">
+                <h2>My creative process and
+                    tools i used</h2>
+                <div class="process">
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <div class="tools">
+                                <img src="img/mark2.png" alt="process-icon">
+                                <h3>Market Research.</h3>
+                                <p>In the beginning phase, the goal is to learn as much as possible about your market
+                                    and
+                                    your
+                                    individual goal.</p>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="tools">
-                            <img src="img/roadmap.png" alt="process-icon">
-                            <h3>Roadmap.</h3>
-                            <p>A road map of the UX process is created. This roadmap includes milestones that will take
-                                you
-                                through.
-                            </p>
+                        <div class="col-md-6">
+                            <div class="tools">
+                                <img src="img/roadmap.png" alt="process-icon">
+                                <h3>Roadmap.</h3>
+                                <p>A road map of the UX process is created. This roadmap includes milestones that will
+                                    take
+                                    you
+                                    through.
+                                </p>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="tools">
-                            <img src="img/wireframe.png" alt="process-icon">
-                            <h3>Wireframing.</h3>
-                            <p>A wireframe is a simple, skeletal outline of a design. It represents only the structure
-                                and
-                                layout of
-                                the service being built.</p>
+                        <div class="col-md-6">
+                            <div class="tools">
+                                <img src="img/wireframe.png" alt="process-icon">
+                                <h3>Wireframing.</h3>
+                                <p>A wireframe is a simple, skeletal outline of a design. It represents only the
+                                    structure
+                                    and
+                                    layout of
+                                    the service being built.</p>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="tools">
-                            <img src="img/prototype.png" alt="process-icon">
-                            <h3>Prototyping.</h3>
-                            <p>The prototype is where the design starts coming to life. An interactive, working design
-                                is
-                                completed
-                                in a design tool that you can try for yourself.</p>
+                        <div class="col-md-6">
+                            <div class="tools">
+                                <img src="img/prototype.png" alt="process-icon">
+                                <h3>Prototyping.</h3>
+                                <p>The prototype is where the design starts coming to life. An interactive, working
+                                    design
+                                    is
+                                    completed
+                                    in a design tool that you can try for yourself.</p>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-4">
-                        <div class="tools">
-                            <img src="img/usertest.png" alt="process-icon">
-                            <h3>User testing.</h3>
-                            <p>Before going live, the design has to be tested by users. This is to identify which
-                                sections or
-                                areas
-                                of the website that can be improved.</p>
+                        <div class="col-md-6">
+                            <div class="tools">
+                                <img src="img/usertest.png" alt="process-icon">
+                                <h3>User testing.</h3>
+                                <p>Before going live, the design has to be tested by users. This is to identify which
+                                    sections or
+                                    areas
+                                    of the website that can be improved.</p>
+                            </div>
                         </div>
-                    </div>
 
 
-                    <div class="col-md-4">
-                        <div class="tools">
-                            <img src="img/completion.png" alt="process-icon">
-                            <h3>Design completion.</h3>
-                            <p>The final touches have been made, and the finished website is up and running.</p>
+                        <div class="col-md-6">
+                            <div class="tools">
+                                <img src="img/completion.png" alt="process-icon">
+                                <h3>Design completion.</h3>
+                                <p>The final touches have been made, and the finished website is up and running.</p>
+                            </div>
                         </div>
+
                     </div>
 
                 </div>
-
             </div>
         </section>
+
+        <section id="tools">
+            <div class="container">
+                <h1>Tools</h1>
+                <p>We put your ideas and thus your wishes in the form of unique the project that
+                    inspires you and your customert.</p>
+            </div>
+            <div class="tools-img-1">
+                <img src="img/Figma.png" alt="">
+                <img src="img/Photoshop.png" alt="">
+                <img src="img/Js.png" alt="">
+                <img src="img/Illustrator.png" alt="">
+            </div>
+            <div class="tools-img-2">
+                <div><img src="img/Html.png" alt=""></div>
+                <div><img src="img/css png.png" alt=""></div>
+            </div>
+
+        </section>
+        <section id="project">
+            <div class="container">
+                <div class="row">
+                    <h1>Projects</h1>
+                    <p></p>
+                    <div class="col-md-6 ">
+                        <div></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+
+
+
 
 
 
